<resources>
    <string name="app_name">EaasyMoney</string>
    <string name="open">open</string>
    <string name="header">EaasyMoney</string>
    <string name="firstbody">For those looking to make money and crypto passively  in an easily accessible way. We can show you Apps, Games and Website that provide plenty of avenues to consider. </string>
    <string name="benefit">You can choose how you want to earn money and crypto - by playing games, completing surveys, watching videos, shopping online and creating accounts. </string>
    <string name="man">Do you need some extra cash but do not  have time or the ability to get a part time job and we can all agree that there are alot of fake money making apps out there. See how EassyMoney can make you earn additional income that makes your life easier     </string>
    <string name="rep">Wherever you are, on the bus, at school, at work and at home. EaasyMoney has helped  you search for apps, games to play that earn you money or crypto and websites that pays and they all legal and legit. No more going through youtube trying to find ways to make money.</string>
    <string name="rep2">Make money however you want. EaasyMoney provides different ways to earn money and crypto, like playing games, filling surveys, surfing the web and so much more. We are going to provide the best apps, games and website to make you earn with ease </string>
    <string name="bod">There are so many ways to make money than ever before, both online and offline, but knowning where to invest your time can be tricky . But no need to worry EaasyMoney is here help, we have reviewed different apps, games and website to find the ones that are both legit and worth your time. Here are the best ways to make money.</string>
    <string name="appbod">The rise of mobile application has allowed people to earn income on a near 24/7 basis. We have tested the most popular money making apps and crpto earning apps based on potential, ease to use, user ratings and company reputation. Clck the button below to see apps that earn money and crypto </string>
    <string name="gambod"> Are you an avid gamer who spends much of your spare time gaming on your phone? If so, you are in luck, you can earn cash and crypto by playing mobile games. By just playing, you can earn gift cards or win cash or crypto. So what are you waiting for click the button below to start earning.  </string>
    <string name="webbod">You dont have to always spend money to make money. If you want to launch a side gig to generate regular part time income, or a quick cash. There are website that can help you do that.  </string>
    <string name="appmonpage">You can earn extra money directly from apps on your smartphone. After some thorough research, I have identified the top money making app in 2023, these apps are listed below :</string>
    <string name="appcrptpage">We all know how valuable cryptocurrencies are, but it becomes a whole lot more interesting if you can earn free crypto. Buying crypto with your fiat currencies is a no-brainer. There are excellent apps for that and platform for that. Some also take a more technical route in mining crypto. But both of these are somewhat risky, as crypto prices can sway like anything with just an Elon Musk tweet. However, we are here to tell you about a way to earn crypto without spending anything.\nSo without any wait, I will start the list showing platform to earn free crypto.</string>
    <string name="gamemonpage">Grab your mobile phone, download these games, and get paid for playing games. While you wont make enough money to quit your job and be a full time gamer, Start earning today with these play to win games</string>
    <string name="gamecryptpag">Play to Earn crpyto games are not only fun but are also profitable. Unlike traditional video, where your achievements are in-game assets. But do know you can earn crypto for playing anything from pet centered games to 3D metaverse games and so many much more. So if you are curious to explore blockchain games that earn you some quick extra cash, here are some some list of the of the best  play to earn games and their fatures pros and cons. </string>
    <string name="webmon">People are looking for ways to make money online, Besides requiring little or no startup cost. These websites help you to earn cash, and all you need is a internet connection and a computer or your mobile device. So we have compiled some list of website that help you earn that quick or at a long run, </string>
    <string name="webcrypt4">The market is getting bigger so as the use of crypto currencies. So lets take a look at some of the ways to take advantage of these promotion and get free cryptos while they are still available</string>
    <string name="hon">1.<u>Honeygain</u></string>
    <string name="hon1">Start earning money by sharing your internet connection with data analysts. Honeygain allows you to reach unused internet full potential in the most convenient way!
You can set up the app in less than 5 minutes and start making your money online. Simply install Honeygain on any device and connect it to the Internet. According to our estimator, by running Honeygain you will get $1 for every 10 GBs shared! Your earnings are unlimited!</string>
    <string name="honbod1">With Honeygain, you can make money by simply sharing your Internet.</string>
    <string name="honbod2"> ---PAYOUT RATE AND PAYMENT---</string>
    <string name="honbod3">You will receive credits for every KB of data you share with the Honeygain network, and after collecting enough credits, you will be able to convert them to USD. Our current payout rate is $1 / 10GB, but take note that results may vary in each individuals case. Currently, we support payments via PayPal, but more options are coming soon! Stay tuned!</string>
    <string name="honbod4">---WHERE DOES THE TRAFFIC COME FROM?---</string>
    <string name="honbod5">From Fortune 500 companies and data scientists that we make sure are reliable - as the queen bee knows her bees, we know what every partner uses their network for.</string>
    <string name="honbod6">---HOW IS THE INTERNET USED?---</string>
    <string name="honbod7">Data scientists will use Honeygain users internet data to extract knowledge and insights to solve complex problems to find solutions for market research, ad verification, brand protection, pricing intelligence, travel fare aggregation, and SEO monitoring</string>
    <string name="honbod8">--- IS IT SAFE?---</string>
    <string name="honbod9">100%. Honeygain app connection is encrypted and perfectly safe for any device, guaranteeing private information is unreachable. So rest assured and make money from home without any security threats!</string>
    <string name="fiek">2.<u>Field Agent</u></string>
    <string name="fiek1">The app  is focused on finding opportunities for everyday people to make money. This is the app that pays you real cash. The app  send its agents all over the United States to gather information, take photos, and share their opinions. Join over one-million shoppers who have already joined!</string>
    <string name="fiek2">Every day, people like you are using the Field Agent App to make money while they shop.</string>
    <string name="fiek3">For over 10 years, the Field Agent App has provided a fast, flexible means for thousands of people to make real cash while doing what they are already doing—shopping in stores and online.
Agents gather information for brands and retailers by taking photos, sharing opinions, and completing other tasks to ultimately help companies deliver the best products and experiences possible for people like you!</string>
    <string name="fiek4">Here’s How It Works</string>
    <string name="fiek5">1. Find a Job - Check often to find the right job for you; we offer audits, research, mystery shopping, product trials and more.

\n2. Complete It - Once you’ve reserved a job, complete it within the time frame and make sure to follow instructions carefully.

\n3. Get Paid - Once approved, your money is ready for you to deposit into your account. Save it or spend it! Our Agents have bought puppies, vacations, dance lessons and more with their earnings. What will you buy?</string>
    <string name="fiek6">Things To Know</string>
    <string name="Sweatcoin">1.<u>Sweatcoin</u></string>
    <string name="sweat1">Sweatcoin is a new breed of step counter and activity tracker that converts your steps into a currency you can spend on gadgets, sports and fitness kit, services and experiences. Sweatcoin is an achievement tracker for a new generation. Spend sweatcoins earned on goods, services and experiences with our partner brands in the marketplace. Or if you are feeling generous, you can exchange them with your friends and family and even donate to amazing causes through Sweatcoin for good</string>
    <string name="pi1">2.<u>Pi Network</u></string>
    <string name="pi2">Pi is a new digital currency. This app allows you to access and grow your Pi holdings and serves as wallet to host your digital assets. Pi is fairly distributed, eco-friendly and consumes minimal battery power.Start mining cryptocurrency today with our free, energy-light mobile app.</string>
    <string name="bee1">3.<u>Bee Network</u></string>
    <string name="bee2">Bee Network is a blockchain-based innovative technology that aims to help users to earn Bees in a gamified experience. Users earn Bees through 3 roles: Pioneer, Ambassador and Verifier.
To make Bee valuable, we strive to make Bee Network a real-life social network and to guide players to use Bee as a medium of exchange for goods and service in real life, with the long-term goal of listing Bee Network on an exchange.
</string>
    <string name="coin1">4.<u>COIN</u></string>
    <string name="coin2">Launched in early 2019, COIN is a mobile app enabling over 1 million users to earn digital assets for validating geospatial location data when traveling, commuting, jogging or moving about the real world while interacting with each other and enjoying in-app challenges.</string>
    <string name="thun">5.<u>ThunderCore</u></string>
    <string name="thun1">ThunderCore is revolutionizing how mobile entertainment apps create value for their users.Play to earn mechanics, paid participation, and user-owned identity and assets all help to create new economies, spaces and places for users to have fun and earn in the virtual world</string>
    <string name="tmm"><u><b>Meet The Team</b></u></string>
    <string name="far">The Founder and CEO of YiziCorp.\n (App. Developer)</string>
    <string name="yizi"><u><b>Yizi Corp</b></u></string>
    <string name="miss"><u><b>Our Mission</b></u></string>
    <string name="miss2">Yizi Corp. was founded in 2023 as a way to assist people with their financial goals.We show users ways in making some extra cash doing what you(users) love doing.For those looking to make money and crypto passively  in an easily accessible way. We can show you Apps, Games and Website that provide plenty of avenues to consider. As Yizi Corp. grows we are going to create more apps that gives latest update in technology, gaming and technology advancement
    </string>
   <string name="miss3"> <b><u>Working With Yizi Corp.?</u></b>
    \nIf you are looking for information on advertising options or how we might be able to work together. Please contact us on our E-mail - <b><u>yizicorp@gmail.com</u></b>
    </string>
    <string name="tim">Head of Digital Media</string>
</resources>