<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gblue"
    tools:context="com.yizicorp.eaasymoney_earncryptoandcash.Aboutus">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/gohom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:fontFamily="@font/aloo"
                android:gravity="center"
                android:text="@string/header"
                android:textColor="@color/mblue"
                android:textSize="25dp" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/amada"
                    android:gravity="center"
                    android:text="@string/yizi"
                    android:textColor="@color/mblue"
                    android:textSize="40dp" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/miss"
                    android:textColor="@color/mblue"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/miss2"
                    android:textColor="#0B1D49"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/miss3"
                    android:textColor="#0B1D49"
                    android:textStyle="bold" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tmm"
                    android:textColor="@color/mblue"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/farr" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Yisa Farouk"
                    android:textColor="@color/mblue"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/far"
                    android:textColor="@color/mblue"
                    android:textSize="17dp"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="29dp"
                    android:src="@drawable/tim" />


                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Etim Samuel"
                    android:textColor="@color/mblue"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tim"
                    android:textColor="@color/mblue"
                    android:textSize="17dp"
                    android:textStyle="bold" />


            </LinearLayout>


        </ScrollView>
    </RelativeLayout>

</RelativeLayout>