<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
     android:layout_height="match_parent"
    android:background="@color/gblue"
    tools:context=".Crypto_app">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/gohom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:fontFamily="@font/aloo"
                    android:gravity="center"
                    android:text="@string/header"
                    android:textColor="@color/mblue"
                    android:textSize="25dp" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Legit Crypto Earning Apps For Android"
                    android:textColor="@color/mblue"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="75dp"
                    android:padding="10dp"
                    android:text="@string/appcrptpage"
                    android:textColor="#0B1D49"
                    android:textSize="16sp"
                    android:textStyle="bold" />



            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="440dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/sweat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/Sweatcoin"
                    android:layout_gravity="left"
                    android:textColor="@color/lik"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sweat1"
                    android:textColor="#0B1D49"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sweatre"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/butstrt"
                    android:text="Read More"
                     />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="790dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/Pi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_gravity="left"
                    android:text="@string/pi1"
                    android:textColor="@color/lik"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pi2"
                    android:textColor="#0B1D49"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/pidown"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/butstrt"
                    android:text="Read More"
                     />

                <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adViewcrptapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-4579217632942142/1319800389"></com.google.android.gms.ads.AdView>


            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1100dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/bee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_gravity="left"
                    android:text="@string/bee1"
                    android:textColor="@color/lik"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bee2"
                    android:textColor="#0B1D49"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/beere"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/butstrt"
                    android:text="Read More"
                     />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1460dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_gravity="left"
                    android:text="@string/coin1"
                    android:textColor="@color/lik"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coin2"
                    android:textColor="#0B1D49"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/coinre"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/butstrt"
                    android:text="Read More"
                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1690dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:clickable="true"
                    android:text="@string/thun"
                    android:textColor="@color/lik"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thun1"
                    android:textColor="#0B1D49"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/ttre"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/butstrt"
                    android:text="Read More"
                     />

                <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adViewappcrypt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-4579217632942142/5077429606"></com.google.android.gms.ads.AdView>


            </LinearLayout>





        </RelativeLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/tryagain"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ash">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/nonint"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="No Internet Connection"
            android:textSize="30dp"
            android:layout_marginTop="380dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Check your internet connection\n and try again"
            android:layout_marginTop="430dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:gravity="center"
            >

            <Button
                android:id="@+id/internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/intrt"
                android:text="Try Again"
                android:textAllCaps="true" />


        </LinearLayout>



    </RelativeLayout>


</RelativeLayout>